# onnx_audio_plugin

./: .typos.toml  Cargo.toml  LinearONNX.ipynb  README.md  _typos.toml  bundler.toml
.github/: release.yml
.github/workflows/: build.yml  ci.yaml  codecoverage.yml
benches/: bench.rs
burn/: Cargo.toml  README.md  build.rs
burn/src/: lib.rs  model.rs
candle/: Cargo.toml
onnx/: README.md  linear.onnx  linear.py  pyproject.toml  sin.onnx  tanh.onnx  tanh.py
onnx/linear/: README.md  linear.onnx.data  pyproject.toml
ort/: Cargo.toml  README.md
ort/src/: lib.rs
src/: lib.rs
tract/: Cargo.toml  README.md
tract/benches/: bench.rs
tract/src/: lib.rs
