[package]
name = "onnx_audio_plugin"
version = "0.1.2"
edition = "2021"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]
license = "GPLv2"
homepage = "https://github.com/AkiyukiOkayasu/onnx_audio_plugin"
description = "Audio plug-in example using ONNX."

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
tract-onnx = "0.20.22"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"

[profile.release]
# Rust Performance Book
# https://nnethercote.github.io/perf-book/build-configuration.html
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[[bench]]
name = "bench"
harness = false
