[workspace]
resolver = "2"
members = ["xtask", "tract", "burn", "candle"]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Akiyuki Okayasu <akiyuki.okayasu@gmail.com>"]
license = "GPLv2"
homepage = "https://github.com/AkiyukiOkayasu/onnx_audio_plugin"
description = "Audio plug-in packages using ONNX."
rust-version = "1.83.0"

[workspace.dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
    "assert_process_allocs",
] }

[profile.release]
# Rust Performance Book
# https://nnethercote.github.io/perf-book/build-configuration.html
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
